AI Refactor for techsur-rfp-ai-service-development/src/main/java/solutions/techsur/rfpaiservice/service/impl/RequestForProposalDocumentServiceImpl.java:
Changes:
- Replaced import of `org.apache.logging.log4j.util.Strings` with `org.springframework.util.StringUtils` for `EMPTY` as `Strings.EMPTY` is non-standard and to maintain consistency with Spring utility usage.
- Replaced deprecated or unnecessary usage of Apache `ObjectUtils.isNotEmpty` with simpler and safer checks for emptiness.
- Improved null checks and defensive coding especially in file validation and file extension extraction.
- Updated `validateMultipartFile` to avoid unnecessary array creation when no errors exist by returning empty array directly.
- Simplified stream operations by using `.collect(Collectors.toList)` instead of `.toList` which requires Java 16+, to maintain compatibility with Java 8+ typical in Spring Boot projects.
- Used consistent logging message patterns and improved error messages with exception chaining for better debugging.
- Reordered code slightly for clarity and method grouping.
- Added final keyword to method parameters where applicable for immutability.
- Minor improvements in string handling and checks, ensuring case-insensitivity and defensive null handling.
- Removed redundant comments and improved method-level comments for clarity.
- General formatting and readability improvements.